# wolken-gallery

./: .gitignore  CMakeLists.txt  README  TODO  ajax.js  conectar.php  datos.php  funciones.php  index.php
DEBIAN/: control  copyright
backend/: account.php  checklog.php  deleteday.php  funciones.php  index.php  lang.php  logedin.php  login.php  logout.php  phpmylogon.php  pml_config.inc.php  use.php
conf/: apache.conf
css/: imgareaselect-animated.css  jsDatePick_ltr.css  jsDatePick_ltr.min.css  style.css
debian/: changelog  control  copyright  postinst  postrm
img/: thumbs.php
inc/: createzip.php  datos.php  zipday.php
js/: ajax.js  body.js  jquery.imgareaselect.pack.js  jquery.lightbox-0.5.js  jsDatePick.jquery.min.1.3.js  lightbox.js
src/backend/: account.php  config.php  index.php  login.php  logout.php
src/css/: style.css
src/inc/: datos.php  funciones.php
src/js/: ajax.js  backend.js  body.js  jquery.lightbox-0.5.js
